operator and expectation clean-up

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -256,9 +256,9 @@ Let $\spX\eqd\linearspaceX$ and $\spY\eqd\linearspaceY$ be linear spaces.\\
 %---------------------------------------
 Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, both over a field $\F$.
 \thmbox{
-  \text{$\opL$ is \prope{linear}}
+  \brb{\text{$\opL$ is \prope{linear}}}
   \qquad\implies\qquad
-  \brbl{\begin{array}{F>{\ds}lc>{\ds}lCD}
+  \brb{\begin{array}{F>{\ds}lc>{\ds}lCD}
       1. & \opL\vzero    &=& \vzero                                                        &                              & and
     \\2. & \opL(-\vx)    &=& -(\opL\vx)                                                    & \forall \vx\in\spX           & and
     \\3. & \opL(\vx-\vy) &=& \opL\vx - \opL\vy                                             & \forall \vx,\vy\in\spX       & and
@@ -272,55 +272,65 @@ Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, b
     \begin{align*}
       \opL\vzero
         &= \opL\brp{0\cdot\vzero}
-        && \text{by additive identity property\ifsxref{vector}{thm:vs_addid}}
+        && \text{by additive identity property}
+        && \text{\ifxref{vector}{thm:vs_addid}}
       \\&= 0\cdot\brp{\opL\vzero}
-        && \text{by \prope{homogeneous} property of $\opL$ \xref{def:linop}}
+        && \text{by \prope{homogeneous} property of $\opL$}
+        && \text{\xref{def:linop}}
       \\&= \vzero
-        && \text{by additive identity property\ifsxref{vector}{thm:vs_addid}}
+        && \text{by \prope{additive identity} property}
+        && \text{\ifxref{vector}{thm:vs_addid}}
     \end{align*}
 
-  \item Proof that $\opL(-\vx)    = -(\opL\vx)$:
+  \item Proof that $\opL(-\vx)    = -(\opL\vx)$: \label{item:L_prop_negative}
     \begin{align*}
       \opL\brp{-\vx}
         &= \opL\brp{-1\cdot\vx}
-        && \text{by additive inverse property\ifsxref{vector}{thm:vs_addinv}}
+        && \text{by \prope{additive inverse} property}
+        && \text{\ifxref{vector}{thm:vs_addinv}}
       \\&= -1\cdot\brp{\opL\vx}
-        && \text{by \prope{homogeneous} property of $\opL$ \xref{def:linop}}
+        && \text{by \prope{homogeneous} property of $\opL$}
+        && \text{\xref{def:linop}}
       \\&= -\brp{\opL\vx}
-        && \text{by additive inverse property\ifsxref{vector}{thm:vs_addinv}}
+        && \text{by \prope{additive inverse} property}
+        && \text{\ifxref{vector}{thm:vs_addinv}}
     \end{align*}
 
   \item Proof that $\opL(\vx-\vy) = \opL\vx - \opL\vy$:
     \begin{align*}
       \opL(\vx-\vy)
         &= \opL(\vx+(-\vy))
-        && \text{by additive inverse property\ifsxref{vector}{thm:vs_addinv}}
+        && \text{by \prope{additive inverse} property}
+        && \text{\ifxref{vector}{thm:vs_addinv}}
       \\&= \opL(\vx) + \opL(-\vy)
-        && \text{by \prope{linearity} property of $\opL$ \xref{def:linop}}
+        && \text{by \prope{linearity} property of $\opL$}
+        && \text{\xref{def:linop}}
       \\&= \opL\vx - \opL\vy
-        && \text{by 2.}
+        && \text{by \pref{item:L_prop_negative}}
     \end{align*}
 
   \item Proof that $\opL\brp{\sum_{n=1}^\xN \alpha_n\vx_n}  = \sum_{n=1}^\xN \alpha_n\brp{\opL\vx_n}$:
     \begin{enumerate}
-      \item Proof for $N=1$:
+      \item Proof for $\xN=1$:
         \begin{align*}
           \opL\brp{\sum_{n=1}^\xN \alpha_n\vx_n}
             &= \opL\brp{\alpha_1\vx_1}
-            && \text{by $N=1$ hypothesis}
+            && \text{by $\xN=1$ hypothesis}
           \\&= \alpha_1\brp{\opL\vx_1}
-            && \text{by \prope{homogeneous} property of \prefp{def:linop}}
+            && \text{by \prope{homogeneous} property of $\opL$}
+            && \text{\xref{def:linop}}
         \end{align*}
 
-      \item Proof that $N$ case $\implies$ $N+1$ case:
+      \item Proof that $\xN$ case $\implies$ $\xN+1$ case:
         \begin{align*}
-          \opL\brp{\sum_{n=1}^{N+1} \alpha_n\vx_n}
-            &= \opL\brp{\alpha_{N+1}\vx_{N+1} + \sum_{n=1}^{N} \alpha_n\vx_n}
-          \\&= \opL\brp{\alpha_{N+1}\vx_{N+1}} + \opL\brp{\sum_{n=1}^{N} \alpha_n\vx_n}
-            && \text{by \prope{linearity} property of \prefp{def:linop}}
-          \\&= \alpha_{N+1}\opL\brp{\vx_{N+1}} + \sum_{n=1}^{N} \opL\brp{\alpha_n\vx_n}
-            && \text{by left $N+1$ hypothesis}
-          \\&= \sum_{n=1}^{N+1} \opL\brp{\alpha_n\vx_n}
+          \opL\brp{\sum_{n=1}^{\xN+1} \alpha_n\vx_n}
+            &= \opL\brp{\alpha_{\xN+1}\vx_{\xN+1} + \sum_{n=1}^{\xN} \alpha_n\vx_n}
+          \\&= \opL\brp{\alpha_{\xN+1}\vx_{\xN+1}} + \opL\brp{\sum_{n=1}^{\xN} \alpha_n\vx_n}
+            && \text{by \prope{linearity} property of $\opL$}
+            && \text{\xref{def:linop}}
+          \\&= \alpha_{\xN+1}\opL\brp{\vx_{\xN+1}} + \sum_{n=1}^{\xN} \opL\brp{\alpha_n\vx_n}
+            && \text{by left $\xN+1$ hypothesis}
+          \\&= \sum_{n=1}^{\xN+1} \opL\brp{\alpha_n\vx_n}
         \end{align*}
     \end{enumerate}
 \end{enumerate}
@@ -503,7 +513,7 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
 %Let $\opL\in\clOxy$ be a linear operator.
 Let $\clOxy$ be the set of all operators from a linear space $\spX$ to a linear space $\spY$.
 Let $\oppN(\opL)$ be the \hie{null space} of an operator $\opL$ in $\clOxy$
-and $\oppI(\opL)$ the \hie{image set} of $\opL$ in $\clOxy$
+and $\oppI(\opL)$ the \structe{image set}\ifsxref{relation}{def:rel_null} of $\opL$ in $\clOxy$
 (\prefp{def:rel_null}).
 \thmbox{
   \dim \oppI(\opL) + \dim\oppN(\opL) = \dim \spX
@@ -1617,7 +1627,7 @@ Let $\bar{\alpha}$ be the complex conjugate of some $\alpha\in\C$.
 %---------------------------------------
 Let $\clOxy$ be the set of all operators from a linear space $\spX$ to a linear space $\spY$.
 Let $\oppN(\opL)$ be the \hie{null space} of an operator $\opL$ in $\clOxy$
-and $\oppI(\opL)$ the \hie{image set} of $\opL$ in $\clOxy$\ifsxref{relation}{def:rel_null}.
+and $\oppI(\opL)$ the \structe{image set} of $\opL$ in $\clOxy$\ifsxref{relation}{def:rel_null}.
 \thmbox{\begin{aligned}
   \oppN(\opA ) &= \oppI(\opAa)^\perp  \\
   \oppN(\opAa) &= \oppI(\opA )^\perp
@@ -1685,12 +1695,7 @@ Let $\opP$ be a bounded linear operator in $\clBxy$.
 %---------------------------------------
 Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opP$ be a bounded linear operator in $\clBxy$
-with \hie{null space} $\oppN(\opP)$ and \hie{image set} $\oppI(\opP)$\ifsxref{relation}{def:rel_null}.
-%\footnote{%
-%  \begin{tabular}{ll}
-%    \structe{null space}: & \prefp{def:rel_null} \\
-%    \structe{image set}:  & \prefp{def:rel_image}
-%  \end{tabular}}
+with \hie{null space} $\oppN(\opP)$ and \structe{image set} $\oppI(\opP)$\ifsxref{relation}{def:rel_null}.
 \thmbox{
   \left.\begin{array}{>{\scy}rrclDD}
     1. & \opP^2   &=& \opP                 & ($\opP$ is a projection operator)     & and \\
@@ -1774,12 +1779,7 @@ Let $\opP$ be a bounded linear operator in $\clBxy$.
   }
 %---------------------------------------
 Let $\spH$ be a \structe{Hilbert space} and $\opP$ an operator in $\clOhh$
-with adjoint $\opPa$, \hie{null space} $\oppN(\opP)$, and \hie{image set} $\oppI(\opP)$.%
-\footnote{%
-  \begin{tabular}{ll}
-    \structe{null space}: & \prefp{def:rel_null} \\
-    \structe{image set}:  & \prefp{def:rel_image}
-  \end{tabular}}
+with adjoint $\opPa$, \structe{null space} $\oppN(\opP)$, and \structe{image set} $\oppI(\opP)$.%
 \thmbox{\begin{array}{>{\quad}F rcl CDc}
   \mc{7}{M}{If $\opP$ is a \structe{projection operator}, then the following are equivalent:}\\
   \cnto & \opPa     &=& \opP
@@ -1993,9 +1993,8 @@ Let $\opNa$ be the adjoint of an operator $\opN\in\clBxy$.
 \index{normal}
 %---------------------------------------
 Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
-Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
-and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
-%\footnote{\structe{image set}: \prefp{def:rel_null}}
+Let $\oppN(\opN)$ be the \structe{null space} of an operator $\opN$ in $\clBhh$
+and $\oppI(\opN)$ the    \structe{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
 \thmbox{
   \mcom{\opNa\opN=\opN \opNa}{$\opN$ is normal}
   \qquad\iff\qquad
@@ -2046,9 +2045,8 @@ and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{de
 \index{normal}
 %---------------------------------------
 Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
-Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
-and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
-%\footnote{\structe{image set}: \prefp{def:rel_null}}
+Let $\oppN(\opN)$ be the \structe{null space} of an operator $\opN$ in $\clBhh$
+and $\oppI(\opN)$ the    \structe{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{def:rel_null}.
 \thmbox{
   \mcom{\opNa\opN=\opN\opNa}{$\opN$ is normal}
   \qquad\implies\qquad
@@ -2081,9 +2079,8 @@ and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$\ifsxref{relation}{de
 \index{normal}
 %---------------------------------------
 Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
-Let $\oppN(\opN)$ be the \hie{null space} of an operator $\opN$ in $\clBhh$
-and $\oppI(\opN)$ the \hie{image set} of $\opN$ in $\clBhh$.
-\footnote{\structe{image set}: \prefp{def:rel_null}}
+Let $\oppN(\opN)$ be the \structe{null space} of an operator $\opN$ in $\clBhh$
+and $\oppI(\opN)$ the    \structe{image set} of $\opN$ in $\clBhh$.
 \thmbox{
   \brb{\mcom{\opNa\opN=\opN\opNa}{$\opN$ is normal}}
   \qquad\implies\qquad
@@ -2489,30 +2486,29 @@ Let $\opU$ and $\opV$ be \structe{bounded linear operators} in $\clBxy$.
 \index{operator!unitary}
 %---------------------------------------
 Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
-Let $\opU$ be a bounded linear operator in $\clBhh$,
-and $\oppI(\opU)$ the \structe{image set}\ifsxref{relation}{def:rel_image} of $\opU$.
+Let $\oppI(\opU)$ be the \structe{image set}\ifsxref{relation}{def:rel_image} of $\opU$.
 \thmbox{\begin{array}{>{\qquad}FlDlDc}
-  \mc{6}{M}{The following conditions are {\bf equivalent}:}
+  \mc{6}{M}{If $\opU$ is a \structb{bounded linear operator} ($\opU\in\clBhh$), then the following conditions are {\bf equivalent}:}
   \\
      1. & \opU\opUa=\opUa\opU=\opI
         &
         &
-        & (unitary)
+        & (\prope{unitary})
         & \iff
    \\2. & \inprod{\opU\vx}{\opU\vy}  = \inprod{\opUa\vx}{\opUa\vy} =  \inprod{\vx}{\vy}
         & and
         & \oppI(\opU)=\setX
-        & (surjective)
+        & (\prope{surjective})
         & \iff
    \\3. & \norm{\opU\vx-\opU\vy} = \norm{\opUa\vx-\opUa\vy} = \norm{\vx-\vy}
         & and
         & \oppI(\opU)=\setX
-        & (isometric in distance)
+        & (\prope{isometric in distance})
         & \iff
    \\4. & \norm{\opU\vx} = \norm{\vx}
         & and
         & \oppI(\opU)=\setX
-        & (isometric in length)
+        & (\prope{isometric in length})
         &
 \end{array}}
 \end{theorem}
@@ -2575,28 +2571,28 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
   \end{tabular}}}
 %(\prefp{def:rel_null}).
 \thmbox{\begin{array}{l}
-  \mcom{\opU\opUa=\opUa\opU=\opI}{$\opU$ is unitary}
+  \mcom{\opU\opUa=\opUa\opU=\opI}{$\opU$ is \propb{unitary}}
   \implies
-  \left\{\begin{array}{rclclD}
-  \opUi                    &=& \opUa                     & &                     &  \\
-  \oppI(\opU)              &=& \oppI(\opUa)              &=& \setX               &  \\
-  \oppN(\opU)              &=& \oppN(\opUa)              &=& \setn{\vzero}    &  \\
-  \normop{\opU}            &=& \normop{\opUa}            &=&  1                  & (\prope{unit length})
-  \end{array}\right.
+  \brb{\begin{array}{rclclD}
+      \opUi         &=& \opUa          & &               & and
+    \\\oppI(\opU)   &=& \oppI(\opUa)   &=& \setX         & and
+    \\\oppN(\opU)   &=& \oppN(\opUa)   &=& \setn{\vzero} & and
+    \\\normop{\opU} &=& \normop{\opUa} &=&  1            & (\prope{unit length})
+  \end{array}}
 \end{array}}
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
   \item Note that $\opU$, $\opUa$, and $\opUi$ are all both
-        {\bf isometric} and {\bf normal}:
+        \prope{isometric} and \prope{normal}:
     \[\begin{array}{lclclll}
-      \opUa\opU & &           &=& \opI &\implies &\text{$\opU$ is isometric}  \\
-      \opU\opUa &=& \opUa\opU &=& \opI &\implies &\text{$\opUa$ is isometric} \\
-      \opUi     &=& \opUa     & &      &\implies &\text{$\opUi$ is isometric} \\
+      \opUa\opU & &           &=& \opI &\implies &\text{$\opU$  is \prope{isometric}}  \\
+      \opU\opUa &=& \opUa\opU &=& \opI &\implies &\text{$\opUa$ is \prope{isometric}} \\
+      \opUi     &=& \opUa     & &      &\implies &\text{$\opUi$ is \prope{isometric}} \\
       \\
-      \opUa\opU &=& \opU\opUa &=&      &\implies &\text{$\opU$ is normal}   \\
-      \opU\opUa &=& \opUa\opU &=&      &\implies &\text{$\opUa$ is normal}  \\
-      \opUi     &=& \opUa     & &      &\implies &\text{$\opUi$ is normal}
+      \opUa\opU &=& \opU\opUa &=&      &\implies &\text{$\opU$  is \prope{normal}}   \\
+      \opU\opUa &=& \opUa\opU &=&      &\implies &\text{$\opUa$ is \prope{normal}}  \\
+      \opUi     &=& \opUa     & &      &\implies &\text{$\opUi$ is \prope{normal}}
     \end{array}\]
 
   \item Proof that
@@ -2613,7 +2609,7 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
     \begin{align*}
       \oppN(\opUa)
         &= \oppN(\opU)
-        && \text{because $\opU$ and $\opUa$ are both normal
+        && \text{because $\opU$ and $\opUa$ are both \prope{normal}
                  and by \prefp{thm:op_norm_prop}}
       \\&= \oppI(\opU)^\perp
         && \text{by \prefp{thm:oppN_oppR}}
@@ -2663,24 +2659,20 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
 \begin{example}
 %---------------------------------------
 Examples of \hie{Fredholm integral operators} include
-\[
-\begin{array}{llrclrcl}
-  1. & \mbox{Fourier Transform}
-     & [\opFT \fx](f) &=& \int_t \fx(t) e^{-i2\pi ft}\dt
+\exbox{\begin{array}{FMrclrcl}
+  1. & \opb{Fourier Transform}
+     & [\opFT \fx](f) &=& \int_{t\in\R} \fx(t) e^{-i2\pi ft}\dt
      & \kappa(t,f)    &=& e^{-i2\pi ft}
 \\
-  2. & \mbox{Inverse Fourier Transform}
-     & [\opFTi \Fx](t) &=& \int_f \Fx(f) e^{i2\pi ft}\df
+  2. & \opb{Inverse Fourier Transform}
+     & [\opFTi \Fx](t) &=& \int_{f\in\R} \Fx(f) e^{i2\pi ft}\df
      & \kappa(f,t)    &=& e^{i2\pi ft}
 \\
-  3. & \mbox{Laplace operator}
-     & [\opL \fx](s) &=& \int_t \fx(t) e^{-st}\dt
+  3. & \opb{Laplace operator}
+     & [\opL \fx](s) &=& \int_{t\in\R} \fx(t) e^{-st}\dt
      & \kappa(t,s)   &=& e^{-st}
-\end{array}
-\]
+\end{array}}
 \end{example}
-
-
 
 %---------------------------------------
 \begin{example}[Translation operator]
