--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -59,6 +59,7 @@ mechanism that appears to be random.
   \citerp{papoulis}{63}
   }
 \label{def:randvar}
+\label{def:rv}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps}.
 \defboxt{
