--- a/common/probspace.tex
+++ b/common/probspace.tex
@@ -512,7 +512,7 @@ $\psP$ is a \fncte{measure} and by \prefpp{def:measure}.
 \begin{proposition}
 \label{prop:cdf_monotone}
 %---------------------------------------
-Let $\ps$ be a probability space, and $\rvX$ a \fncte{random variable}
+Let $\ps$ be a probability space, and $\rvX$ a \fncte{random variable} \xref{def:randvar}
 with \fncte{probability density function} $\ppx(x)$ and
 \fncte{cumulative distribution function} $\pcx(x)$.
 \propbox{\begin{array}{FMD}
