Toeplitz matrix references

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1303,6 +1303,23 @@
   language     = {German},
   }
 
+@inbook{smylie1973,
+  isbn         = {9780323148368},
+  isbn10       = {0323148360},
+  booktitle    = {Methods in Computational Physics: Advances in Research and Applications},
+  editor       = {Bruce Bolt},
+  serieseditor = {Berni Alder and Sidney Fernbach and Manuel Rotenberg},
+  series       = {Geophyics},
+  volume       = {13},
+  title        = {Analysis of Irregularities in the Earth's Rotation},
+  author       = {D. E. Smylie and G. K. C. Clarke and T. J. Ulrych},
+  year         = {1973},
+  pages        = {391--340},
+  publisher    = {Academic Press},
+  url          = {http://books.google.com/books?vid=ISBN9780323148368},
+  urla         = {http://www.amazon.com/dp/9780323148368},
+  }
+
 @article{sylvester1852,
   year         = {1852},
   author       = {James Joseph Sylvester},
