--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -448,6 +448,32 @@
   pages        = {437--442},
   }
 
+@inbook{haykin1979,
+  editor       = {S. Haykin},
+  booktitle    = {Nonlinear Methods of Spectral Analysis},
+  series       = {Topics in Applied Physics},
+  volume       = {34},
+  edition      = {1},
+  publisher    = {Springer-Verlag},
+  title        = {Prediction-Error Filtering and Maximum-Entropy Spectral Estimation},
+  pages        = {9--72},
+  year         = {1979},
+  author       = {S. Haykin and S. Kesler},
+  }
+
+@inbook{haykin1983,
+  editor       = {S. Haykin},
+  booktitle    = {Nonlinear Methods of Spectral Analysis},
+  series       = {Topics in Applied Physics},
+  volume       = {34},
+  edition      = {``Second Corrected and Updated Edition"},
+  publisher    = {Springer-Verlag},
+  title        = {Prediction-Error Filtering and Maximum-Entropy Spectral Estimation},
+  pages        = {9--72},
+  year         = {1983},
+  author       = {S. Haykin and S. Kesler},
+  }
+
 @article{greenhoe2019,
   author       = {Daniel J. Greenhoe},
   title        = {The Effects of the assorted cross-correlation definitions},
