--- a/common/randseq_eigen.tex
+++ b/common/randseq_eigen.tex
@@ -9,7 +9,7 @@
 
 
 %=======================================
-%\section{Eigen-analysis of random processes}
+\section{Definitions}
 \label{sec:KL}
 %=======================================
 %---------------------------------------
@@ -238,28 +238,28 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
     \begin{align*}
        &\pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)\brp{\sum_{m\in\Z}\dotx_m \fpsi_m(t)}^\ast}
        \\&\eqd \pE\brs{\sum_{n\in\Z}\int_{u\in\R}\rvx(u)\fpsi_n^\ast(u)\du   \fpsi_n(t)\brp{\sum_{m\in\Z}\int_v \rvx(v)\fpsi_m^\ast(v)\dv \fpsi_m(t)}^\ast}
-         && \text{by definition of $\dotx$}
-         && \text{\xref{idef:kle_xdot}}
+         && \text{by definition of $\dotx$ 
+                  \xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\rvx(u)\rvx^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
-         && \text{by \prope{linearity}}
-         && \text{\xref{thm:pE_linop}}
+         && \text{by \prope{linearity} 
+                  \xref{thm:pE_linop}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
-         && \text{by definition of $\Rxx(t,u)$}
-         && \text{\xref{def:Rxx}}
+         && \text{by definition of $\Rxx(t,u)$ 
+                  \xref{def:Rxx}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\opR\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
-         && \text{by definition of $\opR$}
-         && \text{\xref{idef:kle_R}}
+         && \text{by definition of $\opR$ 
+                  \xref{idef:kle_R}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\lambda_m\fpsi_m(u)} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by property of \structe{eigen-system}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \brp{\int_{u\in\R}\fpsi_m(u) \fpsi_n^\ast(u)\du }   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by \prope{linearity}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \norm{\fpsi(t)}^2 \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
-         && \text{by \prope{orthogonal} property} 
-         && \text{\xref{thm:opR_eigen}}
+         && \text{by \prope{orthogonal} property  
+                  \xref{thm:opR_eigen}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\lambda_m \kdelta_{mn}   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by \prope{normalized} hypothesis}
        \\&= \sum_{n\in\Z}\lambda_n   \fpsi_n(t)   \fpsi_n^\ast(t)
-         && \text{by definition of \fncte{Kronecker delta} $\kdelta$}
+         \qquad\text{by definition of \fncte{Kronecker delta} $\kdelta$}
          && \text{\xref{def:kdelta}}
        \\&= \sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2
     \end{align*}
@@ -288,3 +288,18 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
 \end{enumerate}
 \end{proof}
 
+%---------------------------------------
+\begin{remark}
+%---------------------------------------
+The \ope{matrix} $\opR$ is \propb{Toeplitz}. 
+For more information about the properties of \prope{Toeplitz} matrices, see
+\citer{grenander1958}, 
+\citer{widom1965},
+\citeP{gray1971},
+\citerpgc{smylie1973}{408}{9780323148368}{\textsection \scshape ``B. Properties of the Toeplitz Matrix"},
+\citer{grenander1984}, 
+\citer{haykin1979},
+\citer{haykin1983},
+\citerg{bottcher1999}{9780387985701},
+\citeP{gray2006}.
+\end{remark}
